--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8" />
     <title>Electron</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
+<!--    <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-inline' 'unsafe-eval' data: gap: content: https://ssl.gstatic.com;-->
+<!--    media-src * blob: 'self' http://* 'unsafe-inline' 'unsafe-eval';-->
+<!--    style-src * 'self' 'unsafe-inline';-->
+<!--    img-src * 'self' data: content:;-->
+<!--    connect-src * blob:;">-->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' blob: data:; script-src 'self'; style-src 'self' 'unsafe-inline'"
+      content="default-src 'self';connect-src * blob:; media-src * blob: 'self' http://* 'unsafe-inline' 'unsafe-eval'; img-src 'self' blob: data:; script-src 'self'; style-src 'self' 'unsafe-inline'"
     />
   </head>
 
