--- a/official/index.html
+++ b/official/index.html
@@ -17,7 +17,7 @@
 </script>
 <h1 id="title">limit-music</h1>
 <h3 id="subtitle">让音乐更简单</h3>
-<a href="https://wwcp.lanzout.com/iIgF60nyrp0f" target="_blank"><div id="downloadButton">download</div></a>
+<a href="https://wwcp.lanzout.com/iXUaY0o0kgwd" target="_blank"><div id="downloadButton">download</div></a>
 <a href="https://github.com/zhijing-liu/limit-music" target="_blank"><img id="github" src="limitMusic/source/img/github.png" alt=""/></a>
 </body>
 </html>
