--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,7 +11,7 @@
 <!--    connect-src * blob:;">-->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self';connect-src * blob:; media-src * blob: 'self' http://* 'unsafe-inline' 'unsafe-eval'; img-src 'self' blob: data:; script-src 'self'; style-src 'self' 'unsafe-inline'"
+      content="default-src 'self';connect-src * blob:; media-src * blob: 'self' http://* atom://* 'unsafe-inline' 'unsafe-eval'; img-src 'self' blob: data:; script-src 'self'; style-src 'self' 'unsafe-inline'"
     />
   </head>
 
